tests/errors/no_alternative_syntax.php
<?php

declare(strict_types=1);

if(true):echo 't';else:echo 'f';endif;
